Fix project home images aspect ratio
* Use transparent bg on images to control the background of ones that
 do not fit directly in the code

--- a/app/(home)/projectCard.module.css
+++ b/app/(home)/projectCard.module.css
@@ -14,4 +14,7 @@
   &:has(li:nth-of-type(4):hover) > li:first-of-type img:nth-of-type(4) {
     opacity: 1;
   }
+  &:has(li:nth-of-type(n + 2):hover) > li:first-of-type img:nth-of-type(1) {
+    opacity: 0;
+  }
 }
